revised v3.4.0 changes (includes Kaltura viewer support)

--- a/public/views/shared/_digital.html.erb
+++ b/public/views/shared/_digital.html.erb
@@ -1,32 +1,70 @@
-<% if false %><!-- comment -->
-  expects 'rep_fv' as a file_version hash when AppConfig[:enable_representative_file_version]
-  otherwise expects to-be-deprecated 'dig_objs' as an array of hashes
-<!-- /comment --><% end  %>
-
-<% if AppConfig[:enable_representative_file_version] && rep_fv.present? %>
+<% if record['json']['representative_file_version'].present? %>
   <div class="objectimage">
-    <div class="panel panel-default">
-      <%= render partial: 'shared/representative_file_version', locals: {:uri => rep_fv['file_uri'], :caption => rep_fv['caption']} %>
-    </div>
+    <%
+      rfv = record['json']['representative_file_version']
+      img_uri = rfv['file_uri']
+      a_uri = rfv['derived_from'] || rfv['link_uri']
+    %>
+    <% if img_uri.include? "manifest.json" %>
+      <%= render partial: 'shared/mirador', locals: {
+        :a_uri => a_uri,
+        :img_uri => img_uri,
+        :caption => rfv['caption']
+      } %>
+    <% elsif img_uri.include? "kaltura.com" %>
+      <%= render partial: 'shared/kaltura', locals: {
+        :a_uri => a_uri,
+        :img_uri => img_uri,
+        :caption => rfv['caption']
+      } %>
+    <% else %>
+      <div class="panel panel-default">
+        <%= render partial: 'shared/representative_file_version_record', locals: {
+          :a_uri => a_uri,
+          :img_uri => img_uri,
+          :caption => rfv['caption']
+        } %>
+      </div>
+    <% end %>
+    <% if representative_link_to_digital_materials?(record) %>
+      <% digitized_link_text = t(
+        'digital_object._public.browse_number_digital_objects_in_collection',
+        num: n_digital_objects
+      ) %>
+      <p class="mb0 pb1 rounded-bottom bg-lightgray">
+        <% link_to digitized_link_text,
+          app_prefix("/repositories/#{params[:rid]}/resources/#{params[:id]}/digitized"),
+          class: 'view-all'
+        %>
+      </p>
+    <% end %>
   </div>
-<% elsif dig_objs.present? %>
+<% elsif local_assigns[:dig_objs] && dig_objs.present? %>
   <% dig_objs.each do |d_file| %>
     <% if !d_file['out'].blank? %>
       <% if d_file['thumb'].blank? %>
         <div class="objectimage">
-          <div class="panel panel-default">
-            <a class="btn btn-default record-type-badge digital_object" style="width: 100%" href="<%= d_file['out'] %>" target="new" title="<%= t('digital_object._public.link')%>">
+          <a 
+            class="external-digital-object__link record-type-badge digital_object"
+            href="<%= d_file['out'] %>"
+            target="new"
+            title="<%= t('digital_object._public.link') %>"
+          >
+            <div class="external-digital-object__content-container">
               <i class="fa <%= { '(moving_image)' => 'fa-file-video-o' ,
                           '(sound_recording)' => 'fa-file-audio-o',
                           '(sound_recording_musical)' => 'fa-file-audio-o',
                           '(sound_recording_nonmusical)' => 'fa-file-audio-o' ,
                           '(still_image)' => 'fa-file-image-o' ,
-                          '(text)' =>  'fa-file-text'}.fetch( d_file['material'], 'fa-file-o' ) %> fa-4x"></i><br/>
-              <div class="panel-heading">
+                          '(text)' =>  'fa-file-text-o'}.fetch( d_file['material'], 'fa-file-o' ) %> fa-4x"></i>
+              <h5 class="ws-normal">
                 <%= d_file['caption'].blank? ? "#{t('enumerations.instance_instance_type.digital_object')} #{d_file['material']}" : d_file['caption'].html_safe %>
-              </div>
-            </a>
-          </div>
+              </h5>
+              <p class="external-digital-object__content-info">
+                <%= t('digital_object._public.go') %> <i class="fa fa-external-link" aria-hidden="true"></i>
+              </p>
+            </div>
+          </a>
         </div>
       <% else %>
         <div class="objectimage">
@@ -42,39 +80,21 @@
       <% end %>
     <% elsif !d_file['thumb'].blank? %>
       <% if d_file['thumb'].include? "manifest.json" %>
-        <div id="viewer-container">
-          <div id="my-mirador"/>
-        </div>
-        <script type="text/javascript">
-          var mirador = Mirador.viewer({
-            "id": "my-mirador",
-            "manifests": {
-              "<%= d_file['thumb'] %>": {
-                "provider": "Penn State University Libraries"
-              }
-            },
-            "windows": [
-              {
-                "loadedManifest": "<%= d_file['thumb'] %>",
-                "thumbnailNavigationPosition": "far-bottom",
-                "view": "single",
-                "allowClose": false,
-                "allowMaximize": false
-              }
-            ],
-            "window": {
-              "sideBarOpen": true
-            },
-            "workspace": {
-              "type": "mosaic"
-            },
-            "workspaceControlPanel": {
-              "enabled": false
-            }
-          });
-        </script>
+        <% if AppConfig[:enable_mirador] == true %>
+          <%= render partial: 'shared/mirador', locals: { :img_uri => d_file['thumb'] } %>
+        <% else %>
+          <div class="objectimage">
+            <img src="<%= d_file['thumb'] %>" alt="<%=  strip_mixed_content(d_file['caption'] || t('digital_object._public.thumbnail')) %>" />
+          </div>
+        <% end %>
       <% elsif d_file['thumb'].include? "kaltura.com" %>
-        <%= render partial: 'shared/kaltura', locals: { :object => d_file['thumb'] } %>
+        <% if AppConfig[:enable_kaltura] == true %>
+          <%= render partial: 'shared/kaltura', locals: { :object => d_file['thumb'] } %>
+        <% else %>
+          <div class="objectimage">
+            <img src="<%= d_file['thumb'] %>" alt="<%=  strip_mixed_content(d_file['caption'] || t('digital_object._public.thumbnail')) %>" />
+          </div>
+        <% end %>
       <% else %>
         <div class="objectimage">
           <img src="<%= d_file['thumb'] %>" alt="<%=  strip_mixed_content(d_file['caption'] || t('digital_object._public.thumbnail')) %>" />
