--- a/public/views/shared/_kaltura.html.erb
+++ b/public/views/shared/_kaltura.html.erb
@@ -1,7 +1,17 @@
-<div class="videowrapper">
-  <% if object.include? "cdnapisec" %>
-    <iframe id="kaltura_player" src="<%= object %>" width="560" height="590" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0"></iframe> 
-  <% else %>
-    <iframe id="kaltura_player" src="<%= object %>" width="740" height="330" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0"></iframe>
-  <% end %>
-</div>
+<%
+  entry_id = img_uri.split("/")[-1]
+%>
+
+<% if AppConfig[:enable_kaltura] == true %>
+  <div class="videowrapper">
+    <iframe id="kmsembed-<%= entry_id %>" width="740" height="560" src="https://psu.mediaspace.kaltura.com/embed/secure/iframe/entryId/<%= entry_id %>/uiConfId/41416911/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0"></iframe>
+  </div>
+<% else %>
+  <div class="panel panel-default">
+    <%= render partial: 'shared/representative_file_version_record', locals: {
+      :a_uri => a_uri,
+      :img_uri => img_uri,
+      :caption => rfv['caption']
+    } %>
+  </div>
+<% end %>
